# kafka_example

./: .gitignore  consumer.py  docker-compose.yml  producer.py  pyproject.toml  readme.md  requirements.txt
node/: .gitignore  README.md  consumer.js  consumer.py  docker-compose.yml  package-lock.json  package.json  producer.js  requirements.txt
